--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Die-casting APQP Management System</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Die-casting APQP Management System</title>
 <script type="importmap">
 {
   "imports": {
