Add meta tag to prevent Google translation
- Add meta name='google' content='notranslate' to prevent Chrome auto-translation
- This prevents DOM manipulation by translation that can cause React errors

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta name="google" content="notranslate">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Die-casting APQP Management System</title>
